5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4134/executions/1575_1330.log
== TEST (2019-03-12 11:36:36) 
-- CODE:
print(41,6)
-- OUTPUT:
41 6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:36:41) 
-- CODE:
print(41,6)
-- EXECUTION TIME:
0.113989
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41 6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:36:48) 
-- CODE:
print(41.6)
-- EXECUTION TIME:
0.13895
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:36:50) 
-- CODE:
print(41.6)
-- OUTPUT:
41.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:37:33) 
-- CODE:
print(42)
-- EXECUTION TIME:
0.195983
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:38:19) 
-- CODE:
print(round(41,6))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:38:22) 
-- CODE:
print(round(41,6))
-- EXECUTION TIME:
0.161964
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:39:11) 
-- CODE:
print(round(41,6))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:39:26) 
-- CODE:
print(round(41.6))
-- EXECUTION TIME:
0.142175
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:39:28) 
-- CODE:
print(round(41.6))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:42:17) 
-- CODE:
print(round(41.6))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:42:20) 
-- CODE:
print(round(41.6))
-- EXECUTION TIME:
0.191699
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:43:54) 
-- CODE:
 print(round(41.6))
-- ERROR:
File "XXXX", line 1
    print(round(41.6))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:44:08) 
-- CODE:
 print(round(41,6)
-- ERROR:
File "XXXX", line 1
    print(round(41,6)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:44:48) 
-- CODE:
 print(42)
-- ERROR:
File "XXXX", line 1
    print(42)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:44:50) 
-- CODE:
 print(42)
-- EXECUTION TIME:
0.161342
-- ERROR:
  File "/home/codebench/codes/1575/1330/main.py", line 1
    print(42)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:44:58) 
-- CODE:
print(42)
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:45:00) 
-- CODE:
print(42)
-- EXECUTION TIME:
0.133623
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:45:11) 
-- CODE:
print(round(41,6))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:45:14) 
-- CODE:
print(round(41,6))
-- EXECUTION TIME:
0.199316
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:46:03) 
-- CODE:
print(round(41,6))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:46:27) 
-- CODE:
round(41,6)
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:46:30) 
-- CODE:
round(41,6)
-- EXECUTION TIME:
0.219005
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:46:40) 
-- CODE:
print(round(41,6))
-- EXECUTION TIME:
0.13485
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:47:49) 
-- CODE:
print(round(41,66))
-- EXECUTION TIME:
0.150097
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:47:51) 
-- CODE:
print(round(41,66))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:47:55) 
-- CODE:
print(round(41,66))
-- EXECUTION TIME:
0.190715
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:48:00) 
-- CODE:
print(round(41.66))
-- EXECUTION TIME:
0.18486
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:48:01) 
-- CODE:
print(round(41.66))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:50:47) 
-- CODE:
print(round(41, 6))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:50:50) 
-- CODE:
print(round(41, 6))
-- EXECUTION TIME:
0.197253
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:54:52) 
-- CODE:
print(round(416, 1)
-- ERROR:
File "XXXX", line 2
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:54:57) 
-- CODE:
print(round(416,1)
-- ERROR:
File "XXXX", line 2
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:55:06) 
-- CODE:
print(round(416,10)
-- ERROR:
File "XXXX", line 2
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:55:11) 
-- CODE:
print(round(416,10))
-- OUTPUT:
416
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:55:13) 
-- CODE:
print(round(416,10))
-- EXECUTION TIME:
0.133899
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
416
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:55:15) 
-- CODE:
print(round(416,10))
-- EXECUTION TIME:
0.175963
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
416
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:55:20) 
-- CODE:
print(round(416, 10))
-- OUTPUT:
416
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:55:22) 
-- CODE:
print(round(416, 10))
-- EXECUTION TIME:
0.181132
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
416
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:55:52) 
-- CODE:
print(round(250%6))
-- EXECUTION TIME:
0.141066
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:55:54) 
-- CODE:
print(round(250%6))
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:56:01) 
-- CODE:
print(round(250,6))
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:58:44) 
-- CODE:
print(round(250//6))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:58:47) 
-- CODE:
print(round(250//6))
-- EXECUTION TIME:
0.17737
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:34:21) 
-- CODE:
print(round(250/6, 2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:35:05) 
-- CODE:
print(round(250/6, 2))
-- EXECUTION TIME:
0.195768
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
